<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <data>
        <import type="android.view.View"/>
        <variable
            name="congressPerson"
            type="com.jpgsolution.youcongresspersonmvvm.model.data.congressPersonDetail.CongresspersonDetails" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/appBarLayout"
            layout="@layout/toolbar">
        </include>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            >
            <androidx.cardview.widget.CardView
                android:layout_margin="8dp"
                app:cardCornerRadius="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="16dp"
                        app:cardCornerRadius="60dp">

                        <ImageView
                            android:id="@+id/photo"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:contentDescription="@string/contentDescriptionImage" />
                    </androidx.cardview.widget.CardView>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_start"
                        android:text="@{congressPerson.dados.ultimoStatus.nomeEleitoral}"
                        tools:text="Name" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/partyAcronym"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_start"
                        android:layout_marginTop="4dp"
                        android:text="@{congressPerson.dados.ultimoStatus.siglaPartido}"
                        tools:text="Sigla partido" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/acronymUf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_start"
                        android:layout_marginTop="4dp"
                        android:text="@{congressPerson.dados.ultimoStatus.siglaUf}"
                        tools:text="Sigla UF" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_start"
                        android:layout_marginTop="4dp"
                        android:text="@{congressPerson.dados.ultimoStatus.email}"
                        android:autoLink="email"
                        tools:text="Email" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/detail"
                            android:textSize="@dimen/text_size_title"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/showDetails"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:elevation="12dp"
                            android:src="@drawable/ic_baseline_arrow_drop_down_24"
                            android:contentDescription="@string/iconDetails"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="4dp"
                        android:visibility="gone"
                        tools:visibility="visible">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:layout_margin="4dp"
                            android:background="@drawable/rounded_detail"
                            android:orientation="vertical">

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:layout_marginBottom="16dp"
                                android:text="@string/gabinete"
                                android:textStyle="bold"
                                android:textSize="@dimen/text_size_title" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/numberGabinet"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text='@{"Numero do gabinete: " + congressPerson.dados.ultimoStatus.gabinete.nome}'
                                tools:text="Numero do gabinete" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/building"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:text='@{"Predio: " + congressPerson.dados.ultimoStatus.gabinete.predio}'
                                tools:text="Predio" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/room"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:text='@{"Sala: " + congressPerson.dados.ultimoStatus.gabinete.sala}'
                                tools:text="Sala" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/walk"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:text='@{"Andar: " + congressPerson.dados.ultimoStatus.gabinete.andar}'
                                tools:text="Aindar" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/phone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:text='@{"Teefone: " + congressPerson.dados.ultimoStatus.gabinete.telefone}'
                                tools:text="Telefone" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_margin="4dp"
                            android:background="@drawable/rounded_detail"
                            android:visibility='@{(congressPerson.dados.redeSocial[0] != null ) ? View.VISIBLE : View.GONE }'
                            android:padding="8dp">

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/socialMedia"
                                android:textStyle="bold"
                                android:layout_marginTop="16dp"
                                android:layout_marginBottom="16dp"
                                android:textSize="@dimen/text_size_title" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/linkFacebook"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text='@{"Facebook: " + (congressPerson.dados.redeSocial[0] != null ? congressPerson.dados.redeSocial[0] : "")}'
                                android:autoLink="web"
                                android:textSize="@dimen/text_size_link"
                                tools:text="Facebook" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/linkInstagram"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text='@{"Instagram: " + (congressPerson.dados.redeSocial[1] != null ? congressPerson.dados.redeSocial[1] : "")}'
                                android:autoLink="web"
                                android:textSize="@dimen/text_size_link"
                                android:layout_marginTop="4dp"
                                tools:text="Instagram" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/linkTwitter"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text='@{"Twitter: " + (congressPerson.dados.redeSocial[2] != null ? congressPerson.dados.redeSocial[2] : "")}'
                                android:autoLink="web"
                                android:layout_marginTop="4dp"
                                android:textSize="@dimen/text_size_link"
                                tools:text="Twitter" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/linkYoutube"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:autoLink="web"
                                android:text='@{"Youtube: " + (congressPerson.dados.redeSocial[3] != null ? congressPerson.dados.redeSocial[3] : "")}'
                                android:textSize="@dimen/text_size_link"
                                tools:text="Youtube" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
